Save Laravel Pint output Output saved to stdout variable for future use in the workflow

--- a/action.yml
+++ b/action.yml
@@ -17,6 +17,11 @@ inputs:
   preset:
     description: "pint preset"
     required: false
+
+outputs:
+  stdout:
+    description: "pint output capture"
+
 runs:
   using: 'docker'
   image: 'Dockerfile'
